// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a error alert with markup 1`] = `
.c2 {
  box-sizing: border-box;
  padding: 8px;
  padding-right: 8px;
}

.c0 {
  box-sizing: border-box;
  background-color: #ff4444;
  border: 1px solid #ff4444;
  color: #fff;
  border-radius: 3px;
  font-size: 16px;
  line-height: 1.4;
  max-width: 450px;
  padding: 10px 16px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1;
  padding: 0;
  position: relative;
}

.c0 a {
  color: #ff4444;
}

.c1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ff4444;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
}

<AlertWrapper
  bordered={false}
  dark={false}
  data-testid="AlertWrapper"
  outline={true}
  size="md"
  variant="danger"
>
  <div
    className="c0"
    data-testid="AlertWrapper"
    role="alert"
    size="md"
  >
    <AlertIcon
      outline={true}
      variant="danger"
    >
      <div
        className="c1"
      >
        <IconWrapper
          src="/media/icons/times-circle.svg"
          width={24}
        />
      </div>
    </AlertIcon>
    <Box
      p={2}
      pr={2}
    >
      <div
        className="c2"
      >
        <p>
          This is an error message
        </p>
      </div>
    </Box>
  </div>
</AlertWrapper>
`;

exports[`Alert should render a info alert 1`] = `
.c2 {
  box-sizing: border-box;
  padding: 8px;
  padding-right: 8px;
}

.c0 {
  box-sizing: border-box;
  background-color: #33b5e5;
  border: 1px solid #33b5e5;
  color: #fff;
  border-radius: 3px;
  font-size: 16px;
  line-height: 1.4;
  max-width: 450px;
  padding: 10px 16px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1;
  padding: 0;
  position: relative;
}

.c0 a {
  color: #33b5e5;
}

.c1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #33b5e5;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
}

<AlertWrapper
  bordered={false}
  dark={false}
  data-testid="AlertWrapper"
  outline={true}
  size="md"
  variant="info"
>
  <div
    className="c0"
    data-testid="AlertWrapper"
    role="alert"
    size="md"
  >
    <AlertIcon
      outline={true}
      variant="info"
    >
      <div
        className="c1"
      >
        <IconWrapper
          src="/media/icons/question-circle.svg"
          width={24}
        />
      </div>
    </AlertIcon>
    <Box
      p={2}
      pr={2}
    >
      <div
        className="c2"
      >
        This is an info message
      </div>
    </Box>
  </div>
</AlertWrapper>
`;

exports[`Alert should render a success alert 1`] = `
.c2 {
  box-sizing: border-box;
  padding: 8px;
  padding-right: 8px;
}

.c0 {
  box-sizing: border-box;
  background-color: #00C851;
  border: 1px solid #00C851;
  color: #fff;
  border-radius: 3px;
  font-size: 16px;
  line-height: 1.4;
  max-width: 450px;
  padding: 10px 16px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1;
  padding: 0;
  position: relative;
}

.c0 a {
  color: #00C851;
}

.c1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #00C851;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
}

<AlertWrapper
  bordered={false}
  dark={false}
  data-testid="AlertWrapper"
  outline={true}
  size="md"
  variant="success"
>
  <div
    className="c0"
    data-testid="AlertWrapper"
    role="alert"
    size="md"
  >
    <AlertIcon
      outline={true}
      variant="success"
    >
      <div
        className="c1"
      >
        <IconWrapper
          src="/media/icons/check-circle.svg"
          width={24}
        />
      </div>
    </AlertIcon>
    <Box
      p={2}
      pr={2}
    >
      <div
        className="c2"
      >
        This is a success message
      </div>
    </Box>
  </div>
</AlertWrapper>
`;

exports[`Alert should render a warning alert 1`] = `
.c2 {
  box-sizing: border-box;
  padding: 8px;
  padding-right: 8px;
}

.c0 {
  box-sizing: border-box;
  background-color: #fda509;
  border: 1px solid #fda509;
  color: #fff;
  border-radius: 3px;
  font-size: 16px;
  line-height: 1.4;
  max-width: 450px;
  padding: 10px 16px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1;
  padding: 0;
  position: relative;
}

.c0 a {
  color: #fda509;
}

.c1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #fda509;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
}

<AlertWrapper
  bordered={false}
  dark={false}
  data-testid="AlertWrapper"
  outline={true}
  size="md"
  variant="warning"
>
  <div
    className="c0"
    data-testid="AlertWrapper"
    role="alert"
    size="md"
  >
    <AlertIcon
      outline={true}
      variant="warning"
    >
      <div
        className="c1"
      >
        <IconWrapper
          src="/media/icons/exclamation-circle.svg"
          width={24}
        />
      </div>
    </AlertIcon>
    <Box
      p={2}
      pr={2}
    >
      <div
        className="c2"
      >
        This is a warning message
      </div>
    </Box>
  </div>
</AlertWrapper>
`;

exports[`Alert should render properly 1`] = `
.c2 {
  box-sizing: border-box;
  padding: 8px;
  padding-right: 8px;
}

.c0 {
  box-sizing: border-box;
  background-color: #33b5e5;
  border: 1px solid #33b5e5;
  color: #fff;
  border-radius: 3px;
  font-size: 16px;
  line-height: 1.4;
  max-width: 450px;
  padding: 10px 16px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1;
  padding: 0;
  position: relative;
}

.c0 a {
  color: #33b5e5;
}

.c1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #33b5e5;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
}

<AlertWrapper
  bordered={false}
  dark={false}
  data-testid="AlertWrapper"
  outline={true}
  size="md"
  variant="info"
>
  <div
    className="c0"
    data-testid="AlertWrapper"
    role="alert"
    size="md"
  >
    <AlertIcon
      outline={true}
      variant="info"
    >
      <div
        className="c1"
      >
        <IconWrapper
          src="/media/icons/question-circle.svg"
          width={24}
        />
      </div>
    </AlertIcon>
    <Box
      p={2}
      pr={2}
    >
      <div
        className="c2"
      >
        Hello World
      </div>
    </Box>
  </div>
</AlertWrapper>
`;
